--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "morgan": "~1.9.1",
     "pgtools": "^0.3.0",
     "sequelize": "^5.21.12"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
